<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_chat"
            android:icon="@android:drawable/sym_action_chat"
            android:title="@string/menu_chat" />
        <item
            android:id="@+id/nav_message"
            android:icon="@android:drawable/ic_dialog_info"
            android:title="@string/menu_message" />
        <item
            android:id="@+id/nav_account"
            android:icon="@drawable/ic_launcher_foreground"
            android:title="Account" />
        <item
            android:id="@+id/nav_logout"
            android:icon="@android:drawable/ic_lock_power_off"
            android:title="Logout" />
    </group>
</menu>