<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/activity_admin_book_title"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/activity_admin_book_txt_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:ems="10"
        android:hint="@string/entity_book_id"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <EditText
        android:id="@+id/activity_admin_book_txt_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:ems="10"
        android:hint="@string/entity_book_title"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/activity_admin_book_txt_id" />

    <EditText
        android:id="@+id/activity_admin_book_txt_author"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:ems="10"
        android:hint="@string/entity_book_author"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/activity_admin_book_txt_title" />

    <EditText
        android:id="@+id/activity_admin_book_txt_content"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:ems="10"
        android:hint="@string/entity_book_content"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/activity_admin_book_txt_author" />

    <Button
        android:id="@+id/activity_admin_book_btn_create"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/action_create"
        app:layout_constraintEnd_toStartOf="@+id/activity_admin_book_btn_update"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/activity_admin_book_spn_category" />

    <Button
        android:id="@+id/activity_admin_book_btn_update"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/action_update"
        app:layout_constraintEnd_toStartOf="@+id/activity_admin_book_btn_delete"
        app:layout_constraintStart_toEndOf="@+id/activity_admin_book_btn_create"
        app:layout_constraintTop_toBottomOf="@+id/activity_admin_book_spn_category" />

    <Button
        android:id="@+id/activity_admin_book_btn_delete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/action_delete"
        app:layout_constraintEnd_toStartOf="@+id/activity_admin_book_btn_search"
        app:layout_constraintStart_toEndOf="@+id/activity_admin_book_btn_update"
        app:layout_constraintTop_toBottomOf="@+id/activity_admin_book_spn_category" />

    <Button
        android:id="@+id/activity_admin_book_btn_search"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/action_search"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/activity_admin_book_btn_delete"
        app:layout_constraintTop_toBottomOf="@+id/activity_admin_book_spn_category" />

    <Spinner
        android:id="@+id/activity_admin_book_spn_category"
        android:layout_width="210dp"
        android:layout_height="35dp"
        android:layout_marginTop="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/activity_admin_book_txt_content" />

    <ListView
        android:id="@+id/activity_admin_book_lv_book"
        android:layout_width="409dp"
        android:layout_height="295dp"
        android:layout_marginTop="5dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/activity_admin_book_btn_update" />
</androidx.constraintlayout.widget.ConstraintLayout>